<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="app_name_uppercase">STORY APP</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password_error">Password cannot be less than 8 characters</string>
    <string name="email_invalid">Invalid Email address</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="navigate_up">Navigate up</string>
    <string name="hello">Hello, %1$s</string>
    <string name="photo">Photo</string>
    <string name="add_story">Add Story</string>
    <string name="logout">Logout</string>
    <string name="story_detail">Story Detail</string>
    <string name="retry">Retry</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="preview">Preview</string>
    <string name="request_denied">Request denied</string>
    <string name="file_empty">Please insert the image first!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="add_photo">Add Photo</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="include_current_location">Include current location</string>
</resources>